github/ci/services/prometheus-stack/manifests/stack/production-e2e-workloads/metrics-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /federation
  name: prometheus-metrics
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - metrics.prow-workloads.ci.kubevirt.io
    secretName: prometheus-metrics-tls
  rules:
  - host: metrics.prow-workloads.ci.kubevirt.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-kube-prom-prometheus
            port:
              number: 9090
      - path: /thanos-sidecar
        pathType: Prefix
        backend:
          service:
            name: thanos-sidecar
            port:
              number: 10901
