github/ci/services/prometheus-stack/manifests/stack/production-e2e-workloads/thanos.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-sidecar
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /thanos-sidecar
        pathType: Prefix
        backend:
          service:
            name: thanos-sidecar
            port:
              number: 10901
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: prometheus-sidecar
    app.kubernetes.io/instance: thanos-sidecar
    app.kubernetes.io/name: thanos-sidecar
    app.kubernetes.io/version: v0.21.1
  name: thanos-sidecar
  namespace: thanos
spec:
  type: NodePort
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
    nodePort: 30901
  - name: http
    port: 10902
    targetPort: 10902
    nodePort: 30902
  selector:
    app: prometheus
